syntax = "proto3";

package com.hometopia.proto.ward;

option java_multiple_files = true;
option java_package = "com.hometopia.proto.ward";
option java_outer_classname = "WardProto";

service WardGrpcService {
  rpc getWard(GetWardRequest) returns (GetWardResponse) {
  }
}

message GetWardRequest {
  string name = 1;
  int32 districtCode = 2;
  string countryCode = 3;
}

message GetWardResponse {
  int32 code = 1;
  string name = 2;
}